--- a/index.html
+++ b/index.html
@@ -97,10 +97,13 @@
         and shipping with purpose.
     </p>
     <p class="secondary-text">
-        I'm a freelance product strategist based in Montreal with 10+ years turning complexity into clarity. I've led teams through full platform migrations, payment overhauls, and supply chain transformations—the kind of work that touches every corner of a business. I thrive on making the ambiguous actionable and getting stakeholders aligned when it matters most.
+        I'm a freelance product strategist based in Montreal with 10+ years turning complexity into clarity. 
+        I've led teams through full platform migrations, payment overhauls, and supply chain transformations—the kind of work that touches every corner of a business. 
+        I thrive on making the ambiguous actionable and getting stakeholders aligned when it matters most.
     </p>
     <p class="secondary-text">
-        I bring a bias for action and a track record of driving real outcomes: streamlined operations, faster time-to-market, and products that actually solve problems. Whether you're navigating a critical pivot or building something from scratch, I'm here to help you move forward with confidence and momentum.
+        I bring a bias for action and a track record of driving real outcomes: streamlined operations, faster time-to-market, and products that actually solve problems. 
+        Whether you're navigating a critical pivot or building something from scratch, I'm here to help you move forward with confidence and momentum.
     </p>
     
     <a href="mailto:ivana@gimeno.ca" class="contact-button">Stay in touch</a>
