--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ivana Gimeno - Product Strategist</title>
+  <link rel="icon" type="image/png" href="/ig.png">
   <style>
     * {
       margin: 0;
